# o80

./: CMakeLists.txt  LICENSE  README.md  license.txt  o80_dependencies  package.xml  readme.md
.github/workflows/: cpp_format.yml  git_fixup.yml  todo_check.yml
demos/: clear_memory.py  delay.py  demo_burster.cpp  demo_burster_client.cpp  duration_commands.py  full_trajectory.py  low_resolution_trajectory.py  mirroring.py  relative_iteration.py  replay.py  speed_commands.py  standalone_backend.py
doc/: 01.overview.md  02.installation.md  03.integration.md  03.support.md  05.bursting.md  05.usage.md  09.developers.md  encapsulation.md  joss.md  paper.md  troubleshooting.md  usage.md
example/commands/async/: speed  trajectory  wait_for_completion
example/commands/burst/: burst_sync  burst_up_down
example/commands/sync/: dual_up_down  up_down
example/include/o80/example/: example.hpp
example/python/: standalone.py
example/src/: drivers_demo.cpp  main.cpp  mirror.cpp
example/srcpy/: wrappers.cpp
example/utils/: plotting  rstatus
include/o80/: back_end.hpp  back_end.hxx  bool_state.hpp  burster.hpp  bursting.hpp  command_types.hpp  driver.hpp  frequency_manager.hpp  frequency_measure.hpp  front_end.hpp  front_end.hxx  interpolation.hpp  interpolation.hxx  introspector.hpp  introspector.hxx  item3d_state.hpp  logger.hpp  md_state.hpp  memory_clearing.hpp  mode.hpp  observation.hpp  observation.hxx  pybind11_helper.hpp  pybind11_helper.hxx  pybind_helper.hpp  pybind_helper.hxx  sensor_state.hpp  standalone.hpp  standalone.hxx  standaloneRunner.hpp  state.hpp  state.hxx  state1d.hpp  state2d.hpp  state3d.hpp  state6d.hpp  state_helper.hpp  states.hpp  states.hxx  statexd.hpp  (+7 more)
include/o80/internal/: command.hpp  command.hxx  command_status.hpp  command_status.hxx  command_type.hpp  commands_getter.hpp  commands_getter.hxx  commands_setter.hpp  commands_setter.hxx  controller.hpp  controller.hxx  controllers_manager.hpp  controllers_manager.hxx  observation_exchange.hpp  observation_exchange.hxx  standalone_runner.hpp  standalone_runner.hxx  time_stamp.hpp  type.hpp
internal/o80_internal/: command.hpp  command.hxx  command_id.hpp  command_status.hpp  command_status.hxx  command_type.hpp  controller.hpp  controller.hxx  controllers_manager.hpp  controllers_manager.hxx  standalone_runner.hpp  standalone_runner.hxx  time_stamp.hpp
paper/: paper.bib  paper.md
python/o80/: __init__.py
src/: bool_state.cpp  burster.cpp  command_type.cpp  frequency_manager.cpp  frequency_measure.cpp  item3d_state.cpp  logger.cpp  memory_clearing.cpp  time.cpp  time_stamp.cpp  typedefs.cpp  void_state.cpp
srcpy/: wrappers.cpp
tests/: main.cpp  unit_tests.cpp
