<?xml version="1.0"?>
<package>
  <name>o80</name>
  <version>1.0.0</version>
  <description>synchronizing via python c++ processes</description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>BSD 3-Clause License</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pybind11_catkin</build_depend>
  <build_depend>shared_memory</build_depend>
  <build_depend>real_time_tools</build_depend>
  <build_depend>synchronizer</build_depend>
  <build_depend>time_series</build_depend>

  <run_depend>pybind11_catkin</run_depend>
  <run_depend>shared_memory</run_depend>
  <run_depend>real_time_tools</run_depend>
  <run_depend>synchronizer</run_depend>
  <run_depend>time_series</run_depend>

  <export>
  </export>
</package>
